[gd_scene load_steps=6 format=3 uid="uid://d2wqh1v8jb7c"]

[ext_resource type="Texture2D" uid="uid://d2akareyt06ro" path="res://assets/sprites/buildings/building_01.png" id="1_g3853"]
[ext_resource type="Script" uid="uid://g7b7kc0dkfe1" path="res://scenes/scenario/buildings/building_01.gd" id="2_j4jdi"]
[ext_resource type="Texture2D" uid="uid://k3rq7t553uhj" path="res://assets/sprites/buildings/building_01_mask.png" id="3_83cy4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j4jdi"]
size = Vector2(10, 11)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_83cy4"]
cull_mode = 1
polygon = PackedVector2Array(-2, -6, 5, -6, 5, 6, -6, 6, -6, -6, -4, -6, -4, -5, -5, -5, -5, -2, 1, -2, 1, -4, 2, -4, 2, -1, -5, -1, -5, 5, 4, 5, 4, 2, 2, 2, 2, 4, 1, 4, 1, 1, 4, 1, 4, -5, -2, -5)

[node name="Building01" type="Sprite2D"]
texture_filter = 1
scale = Vector2(100, 100)
texture = ExtResource("1_g3853")
hframes = 2
script = ExtResource("2_j4jdi")

[node name="Area2D" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_j4jdi")

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0.05, 0.05, 0.05, 1)
z_index = -5
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_83cy4")

[node name="Roof" type="Sprite2D" parent="."]
z_index = 50
z_as_relative = false
texture_filter = 1
texture = ExtResource("1_g3853")
hframes = 2
frame = 1

[node name="InsideBuilding" type="CanvasModulate" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
texture_filter = 2
texture_repeat = 1
scale = Vector2(0.95, 0.95)
energy = 0.0
texture = ExtResource("3_83cy4")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 15

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(-2, -6, 5, -6, 5, 6, -6, 6, -6, -6, -4, -6, -4, -5, -5, -5, -5, -2, 1, -2, 1, -4, 2, -4, 2, -1, -5, -1, -5, 5, 4, 5, 4, 2, 2, 2, 2, 4, 1, 4, 1, 1, 4, 1, 4, -5, -2, -5)

[node name="LightOccluder2D" type="LightOccluder2D" parent="StaticBody2D"]
occluder = SubResource("OccluderPolygon2D_83cy4")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
